tests/fixtures/invalid/float_rshift_dict.py
# Cannot right shift Float and Dict[str, int]
x: float = 1.0 >> {"a": 1}
